keep menu fixed in chrome android
- chrome android interferes with scrolling and position:fixed. Before
this patch, scrolling would cause the menu to go out of screen.
- This was not an issue on desktop (chrome/safari) or android firefox
- This was only a bug on chrome android

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -8,6 +8,20 @@ svg {
     sans-serif;
 }
 
+/* Disable native scrolling on window,
+   we will handle scrolling in javascript.*/
+html, body {
+    overflow:hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#board {
+    height: 100vh;
+    width: 100vw;
+    overflow: auto;
+}
+
 #canvas {
   transform-origin: 0 0;
 }
